<resources>
    <string name="app_name">HMDB</string>
    <string name="topRated">Top Rated Movies</string>
    <string name="popular">Popular Movies</string>
    <string name="favourites">Favourite Movies</string>
    <string name="movie_poster">movie poster</string>
    <string name="button_favourite">Mark as \n favourite</string>
    <string name="settings">settings</string>
    <string name="continue_reading">continue reading…</string>
    <string name="trailers">Trailers:</string>
    <string name="tv_trailer">Trailer:</string>
    <string name="read_reviews">Read reviews</string>
    <string name="tv_reviews">user reviews</string>
    <string name="no_reviews">No reviews yet. Be the first to review!</string>
    <string name="banner_no_reviews">No reviews</string>
    <string name="ab_reviews">Reviews</string>
    <string name="add_fav">Added to favourites</string>
    <string name="error">an error occurred</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="already_added">Movie already added to favourites</string>
    <string name="db_unavailable">database unavailable</string>

</resources>
