<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_menu"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/settings"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_popular"
                android:orderInCategory="2"
                android:title="@string/popular" />
            <item
                android:id="@+id/action_topRated"
                android:orderInCategory="1"
                android:title="@string/topRated" />
            <item
                android:id="@+id/action_favourites"
                android:orderInCategory="3"
                android:title="@string/favourites"/>
        </menu>
    </item>
</menu>
