<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:scrollbars="vertical"
        tools:context="com.hfad.popularmovies.DetailFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/dark_background"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="43sp" />

        <ImageView
            android:id="@+id/iv_details"
            android:layout_width="140dp"
            android:layout_height="170dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_details"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/iv_details"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/year"
            android:layout_below="@+id/year"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@+id/year"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_details"
            android:layout_alignStart="@+id/year"
            android:background="@color/colorPrimary"
            android:lineSpacingExtra="2dp"
            android:minWidth="60dp"
            android:padding="@dimen/btn_padding"
            android:text="@string/button_favourite"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_details"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="35dp"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/btn_reviews"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/overview"
            android:layout_below="@+id/overview"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/btn_padding"
            android:text="@string/tv_reviews" />

        <TextView
            android:id="@+id/tv_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/overview"
            android:layout_below="@+id/overview"
            android:layout_marginTop="59dp"
            android:text="@string/trailers"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColorSecondary" />

        <!--change colour of icon-->
        <ImageView
            android:id="@+id/iv_trailer"
            android:layout_width="@dimen/trailer_icon"
            android:layout_height="@dimen/trailer_icon"
            android:layout_alignStart="@+id/tv_trailer"
            android:layout_below="@+id/tv_trailer"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_ondemand_video_black_24dp" />



    </RelativeLayout>
</ScrollView>
